--- a/style.css
+++ b/style.css
@@ -164,10 +164,21 @@ input[type=text], select {
   input[type=submit]:hover {
     background-color: rgb(36, 35, 35);
     transition: 0.7s;
-  }
+}
   
 .div2 {
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 20px;
-  }
+}
+
+.ex2-st
+{
+    width: auto;    
+    background: rgba(151, 150, 150, 0.8);
+    text-align: left;
+    margin-left:10%;
+    margin-right: 10%;
+    position: relative;
+    
+}
